<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2013, Data Management Systems Lab (DMSL), University of Cyprus.
  ~
  ~ Author: P. Mpeis pmpeis01@cs.ucy.ac.cy (University of Cyprus)
  ~
  ~ Project supervisors: A. Konstantinides, D. Zeinalipour-Yazti (University of Cyprus)
  ~
  ~ This file is part of TVM.
  ~ TVM is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="broadcast_receiver_get_partial_radiomap">cy.ucy.dmsl.airplace.getParialRadiomap
    </string>
    <string name="broadcast_receiver_rmapfile_fetched">cy.ucy.dmsl.airplace.radiomapFileFetched
    </string>

    <string name="broadcast_receiver_experiment_localise_instance">
        cy.ucy.dmsl.airplace.experiment_localise_instance
    </string>
    <string name="app_name">TVM</string>
    <string name="prefs_name">Airplace Tracker Preferences</string>
    <string name="app_choose_folder">Choose folder</string>
    <string name="building_settings">Building Settings</string>
    <string name="building_title">Floor Plan</string>
    <string name="building_summary">The floor plan image of building</string>
    <string name="radiomap_file_settings">Radiomap Settings</string>
    <string name="radiomap_download_title">RadioMap Download Settings</string>
    <string name="radiomap_download_summary">Configure parameters to download radio map</string>
    <string name="radiomap_file_title">Radiomap File</string>
    <string name="radiomap_file_summary">The radiomap that is currently used to estimate
        position
    </string>
    <string name="vpn_problem">Not connected to UCY\'s VPN.</string>
    <string name="download_connection_title">Connection Settings</string>
    <string name="serverIP_title">Server Address</string>
    <string name="serverIP_summary">The IP address of the server</string>
    <string name="serverPORT_title">Port number</string>
    <string name="serverPORT_summary">The non-IANA reserved port</string>
    <string name="downloading_file_title">Downloading Settings</string>
    <string name="test_data_file_title">Test Data File</string>
    <string name="test_data_file_summary">The data file to use for offline mode statistics</string>
    <string name="parentDir">..</string>
    <string name="homeDir">.</string>
    <string name="rootDir">/</string>
    <string name="strMinusOne">"-1"</string>
    <string name="strZero">"0"</string>
    <string name="strFirst">"1"</string>
    <string name="strSecond">"2"</string>
    <string name="strFindMe">Find Me</string>
    <string name="getting_location">Getting location..</string>
    <string name="strTrackMe">Track Me</string>
    <string name="strtRecording">Start Recording</string>
    <string name="sampling_title">Sampling Settings</string>
    <string name="samples_title">Samples Number</string>
    <string name="samples_summary">How many samples to record</string>
    <string name="samples_interval_title">Samples Interval</string>
    <string name="samples_interval_summary">Time between two consecutive samplings</string>
    <string name="storing_title">Storing Settings</string>
    <string name="folder_browser_title">Folder</string>
    <string name="folder_browser_summary">The folder to store RSS log files</string>
    <string name="filename_title">Filename</string>
    <string name="filename_summary">The file contains RSS log records</string>
    <string name="uploading_title">Uploading Settings</string>
    <string name="server_IP_title">Server Address</string>
    <string name="server_IP_summary">The server\'s IP address</string>
    <string name="server_PORT_title">Port number</string>
    <string name="server_PORT_summary">The server\'s port</string>
    <string name="upload_file_title">File</string>
    <string name="upload_file_summary">The file to upload</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_logger">Logger</string>
    <string name="menu_preferences">Preferences</string>
    <string name="image_desc">Image</string>
    <string name="Floors">Floors</string>
    <string name="FloorPlinEna">Floor -1</string>
    <string name="FloorZero">Floor 0</string>
    <string name="FloorOne">Floor 1</string>
    <string name="FloorTwo">Floor 2</string>
    <string name="logger">Logger</string>
    <string name="tracking">Tracking..</string>
    <string name="loading">Loading..</string>
    <string name="tracker">Tracker</string>
    <string name="pref_key_clear_sd_card_cache">pref_key_clear_sd_card_cache</string>
    <string name="pref_key_clear_ram_cache">"pref_key_clear_ram_cache"</string>
    <string name="pref_key_localization_algorithm">pref_key_localization_algorithm</string>
    <string name="preferences">preferences</string>
    <string name="pref_key_sd_card_cache_status">pref_key_sd_card_cache_status</string>
    <string name="pref_key_ram_cache_status">pref_key_ram_cache_status</string>
    <string name="pref_key_ram_cache_slots">pref_key_ram_cache_slots</string>
    <string name="pref_key_developer_mode">pref_key_developer_mode</string>
    <string name="pref_key_developer_mode_toggle">pref_key_developer_mode_toggle</string>
    <string name="pref_key_real_simulation">pref_key_real_simulation</string>
    <string name="pref_key_samples_num">pref_key_samples_num</string>
    <string name="pref_key_samples_interval">pref_key_samples_interval</string>
    <string name="pref_key_filename_log">pref_key_filename_log</string>
    <string name="pref_key_write_mode">pref_key_write_mode</string>
    <string name="pref_key_anonymity_algorithm">pref_key_anonymity_algorithm</string>
    <string name="pref_key_datasets">pref_key_datasets</string>
    <string name="pref_key_k_parameter">pref_key_k_parameter</string>
    <string name="pref_key_draw_routes">pref_key_draw_routes</string>
    <string name="pref_key_always_scan">pref_key_always_scan</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="pref_key_k_anonymity">pref_key_k_anonymity</string>
    <string name="developer_mode">Developer Mode</string>
</resources>